# promotion_kit

./: Cargo.toml  README.md
examples/: basic.rs
src/: discount.rs  error.rs  lib.rs  promotion.rs  rule_engine.rs  service.rs  usage_tracker.rs
tests/: promotion_test.rs  service_test.rs
